--- a/assets/index.html
+++ b/assets/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:wght@400;700&family=Poppins:wght@600&family=Roboto+Serif:opsz,wght@8..144,700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NLW Esports</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    
     <header>
       <div>
         <img
@@ -17,12 +24,13 @@
     </header>
 
     <main>
+      
       <section>
         <div>
           <h2>Meus jogos</h2>
           <p>Os games que eu mais curto jogar!</p>
 
-          <ul>
+          <ul class="games-list">
             <li>
               <a
                 target="_blank"
@@ -208,6 +216,7 @@
           </ul>
         </div>
       </section>
+
     </main>
   </body>
 </html>
