--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
             </li>
 
             <li>
+              <a 
+              target="_blank"
+              href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V">
+                  <img 
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" 
+                  alt="imagem do jogo GTA V">
+              </a>
+          </li>
+
+          <li>
+            <a 
+            target="_blank"
+            href="https://www.twitch.tv/directory/game/F1%2022">
+                <img 
+                src="https://static-cdn.jtvnw.net/ttv-boxart/1705795372_IGDB-144x192.jpg" 
+                alt="imagem do jogo Formula 1 2022">
+            </a>
+        </li>
+
+        <li>
+          <a 
+          target="_blank"
+          href="https://www.twitch.tv/directory/game/League%20of%20Legends">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="Imagem do jogo League of Legends">
+          </a>
+      </li>
+
+            <li>
               <a
                 target="_blank"
                 href="https://www.twitch.tv/directory/game/VALORANT"
@@ -54,13 +82,6 @@
               /></a>
             </li>
 
-            <li>
-              <a 
-              target="_blank"
-              href="https://www.twitch.tv/directory/game/League%20of%20Legends">
-                  <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="Imagem do jogo League of Legends">
-              </a>
-          </li>
           </ul>
         </div>
       </section>
